Fixing css to increase readability in mobile devices

--- a/styles/CodeFrame.module.scss
+++ b/styles/CodeFrame.module.scss
@@ -4,12 +4,15 @@
   border: 3px solid var(--color-secondary);
   border-radius: 20px;
   width: 90%;
-  margin: 0 auto;
+  margin: 2rem auto;
   overflow: hidden;
+  code {
+    font-size: 1.5em;
+  }
 
   h2 {
     color: var(--color-primary);
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     width: 100%;
     text-align: center;
     background-color: var(--color-secondary);
