--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -30,7 +30,7 @@
 
   .siteName {
     margin: 0;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     color: var(--color-tertiary);
     transition: all 0.2s ease-in-out;
     &:hover {
@@ -57,10 +57,10 @@
     flex-direction: row;
     align-items: center;
     gap: 2rem;
-    margin: 0rem 2rem;
+    margin: 0rem 2rem 2rem 2rem;
 
     li {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-family: var(--titles-font);
       font-weight: 600;
       transition: all 0.2s ease-in-out;
