--- a/styles/PostCard.module.scss
+++ b/styles/PostCard.module.scss
@@ -14,7 +14,7 @@
   .postCardInfo {
     display: flex;
     flex-direction: column;
-    padding: 0.8rem;
+    padding: 1rem;
     margin-top: 250px;
     z-index: 1;
     background-color: var(--color-post-card-info);
