--- a/styles/SearchBar.module.scss
+++ b/styles/SearchBar.module.scss
@@ -10,8 +10,8 @@
     outline: none;
     border-radius: 5px;
     font-family: var(--content-font);
-    font-size: 1em;
-    padding: 0.5rem 2rem 0.5rem 0.5rem;
+    font-size: 1.3em;
+    padding: 0.8rem 2.6rem 0.8rem 0.5rem;
     color: var(--color-text);
     background-color: var(--color-input-background);
   }
@@ -23,7 +23,7 @@
     transform: translateY(-50%);
     border: none;
     background: none;
-    font-size: 1.6rem;
+    font-size: 2.2rem;
     display: flex;
     align-items: center;
     justify-content: center;
