--- a/styles/Social.module.scss
+++ b/styles/Social.module.scss
@@ -6,8 +6,8 @@
   height: max-content;
   width: max-content;
   padding: 1rem;
-  font-size: 2.5em;
-  gap: 1.8rem;
+  font-size: 3em;
+  gap: 2.5rem;
 }
 
 .socialOnNav {
@@ -54,9 +54,9 @@
     width: 80px;
     padding: 5px;
     position: absolute;
-    top: -15px;
+    top: -25px;
     left: 50%;
-    font-size: 0.8rem;
+    font-size: 1rem;
     transform: translate(-50%, -50%);
     border-radius: 10px;
   }
