--- a/styles/ThemeSelector.module.scss
+++ b/styles/ThemeSelector.module.scss
@@ -13,7 +13,7 @@
     position: absolute;
     top: -25px;
     left: 50%;
-    font-size: 0.8rem;
+    font-size: 1rem;
     transform: translate(-50%, -50%);
     border-radius: 10px;
   }
@@ -41,7 +41,7 @@
   }
 
   & > * {
-    font-size: 2.5em;
+    font-size: 3em;
     color: var(--color-primary);
   }
 }
@@ -54,7 +54,7 @@
     border: 1px solid var(--color-primary);
   }
   & > * {
-    font-size: 2.5em;
+    font-size: 3em;
     color: var(--color-secondary);
   }
 }
